--- a/src/app/views/entity/audit-detail-completed/audit-detail-completed.component.html
+++ b/src/app/views/entity/audit-detail-completed/audit-detail-completed.component.html
@@ -84,7 +84,7 @@
             <div class="paddingTop10"></div>
             <div class="col-md-6 col-xs-6">
               <div class="alertType_wp">
-                <h4>Score</h4>
+                <h4>Points</h4>
                 <span class="fontBold">{{auditModel.score}}</span>
               </div>
             </div>
@@ -149,6 +149,16 @@
                 <div class="alertType_wp">
                   <h4>Suggested Actions</h4>
                   <span>{{auditModel.suggested}}</span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="clear"></div>
+              <div class="paddingTop10"></div>
+              <div class="col-md-6 col-xs-6">
+                <div class="alertType_wp">
+                  <h4>Score</h4>
+                  <span>{{auditModel.grade }} </span>
                 </div>
               </div>
             </div>
