added % symbol in score field in audit field.

--- a/src/app/views/entity/audit-detail-completed/audit-detail-completed.component.html
+++ b/src/app/views/entity/audit-detail-completed/audit-detail-completed.component.html
@@ -158,7 +158,7 @@
               <div class="col-md-6 col-xs-6">
                 <div class="alertType_wp">
                   <h4>Score</h4>
-                  <span>{{auditModel.grade }} </span>
+                  <span>{{auditModel.grade/100 | percent }} </span>
                 </div>
               </div>
             </div>
